--- a/app/assets/themes/tekyla/stylesheets/screen.css
+++ b/app/assets/themes/tekyla/stylesheets/screen.css
@@ -1,6 +1,6 @@
 * {margin:0; padding:0; font-size: 100%; font-family: "Liberation Sans", helvetica, arial, sans-serif;}
 
-html { background: #688ED8;/*background: #C9D7F1;*/}
+html { background: #F1F1F1;/*background: #688ED8 #C9D7F1;*/}
 fieldset {padding: 4px 8px 8px; margin: 1px 1px 8px; border: 1px solid #DDD;/* border:1px solid #95b0e4; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; behavior: url(/pie.htc); background: url(../images/columns.png) repeat-x top; */}
 /*html[dir="ltr"] ul { padding-left: 3ex; }
 html[dir="rtl"] ul { padding-right: 3ex; }*/
@@ -94,12 +94,12 @@ body { /*background: #C9D7F1;*/ }
 
 *[data-click], .clickable { cursor: pointer; }
 
-#wrap { padding: 8px 0; clear: both; background: #F1F1F1; position: relative; z-index: 750; }
+#wrap { padding: 8px 0; margin-top: -1px; clear: both; background: #F1F1F1; position: relative; z-index: 750; }
 #wrap-table {border-collapse: collapse; width: 100%;}
 #wrap-table td#side, #wrap-table td#main {vertical-align: top}
 
-#legals { text-align: center; padding: 4px; background: transparent url(../images/shadow-bottom.png) top repeat-x;}
-#legals, #legals * { color: #EEE; font-size: 11px; }
+#legals { text-align: center; padding: 2px 4px; /*background: transparent url(../images/shadow-bottom.png) top repeat-x;*/}
+#legals, #legals * { color: #AAA; font-size: 11px; text-shadow: 1px 1px 1px #FFF }
 
 .dialog {  background: #C9D7F1; box-shadow: 0px 0px 12px #555; -moz-box-shadow: 0px 0px 12px #555; -webkit-box-shadow: 0px 0px 12px #555; behavior: url(/pie.htc); }
 .dialog .wrap { border: 4px solid #95b0e4; }
@@ -226,6 +226,7 @@ html[dir="rtl"] .main .mn-index {float: right; margin-left: 8px; }
 .main .menu.indicator { background: #FD8; } /*#FA3;*/
 
 /*#top { border-bottom: 1px solid #DDD; }*/
+
 #top .logo-bar { font-size: 20px; font-weight: bold; height: 48px; line-height: 48px; vertical-align: middle; color: #95b0e4;}
 html[dir="ltr"] #top .logo-bar { background: white url(../../../images/ekylibre-mini3.png) left 7px no-repeat; padding: 0 8px 0 170px; }
 html[dir="rtl"] #top .logo-bar { background: white url(../../../images/ekylibre-mini3.png) right 7px no-repeat; padding: 0 170px 0 8px;}
