Remove use of bad session value to determine incoming_payment.id

--- a/app/views/outgoing_payments/show.html.haml
+++ b/app/views/outgoing_payments/show.html.haml
@@ -20,6 +20,6 @@
       =render :partial=>"outgoing_payment_uses/_form"
       .actions=submit_tag
 
--if @outgoing_payment.uses.size>0
+-if @outgoing_payment.purchases.count > 0
   %h2=tc(:purchases)
   =list :purchases
