--- a/app/views/listing_nodes/_comparison.html.haml
+++ b/app/views/listing_nodes/_comparison.html.haml
@@ -3,7 +3,8 @@
 =form_tag({:controller=>:listing_nodes, :action=>:update, :id=>listing_node.id, :type=>"comparison"}, :method=>:put, :remote=>true, "data-update"=>"##{listing_node.key}_comparator", "data-type"=>:html, :id=>"#{listing_node.key}_comparator_form", :style=>"display: none;") do
   =select_tag("comparator", options_for_select(listing_node.comparators, listing_node.condition_operator))
   -if listing_node.sql_type.to_s == "date"
-    =date_field_tag("comparison_value", listing_node.condition_value||listing_node.default_comparison_value)
+    -date = (listing_node.condition_value||listing_node.default_comparison_value).to_date rescue Date.today
+    =date_field_tag("comparison_value", date)
   -elsif listing_node.sql_type.to_s != "boolean"
     =text_field_tag("comparison_value", listing_node.condition_value||listing_node.default_comparison_value, :size=>15)
   =submit_tag(tg(:validate))
