--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
               -if @current_user
                 %td#side.side{:style=>("display:none;" unless session[:side])}=side_tag
                 %td#side-splitter.splitter{:data=>{"toggle"=>toggle_side_url}} &nbsp;
-              %td#main.main.flex-9{:class=>"#{'with-side' if session[:side]} #{'with-help' if session[:help]}"}
+              %td#main.main.flex-9
                 =title_header_tag
                 =notifications_tag
                 =yield
