Tries to fix encoding bug with Ruby 1.9.2 in production mode

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,3 +1,4 @@
+-# coding: UTF-8
 !!! XML utf-8
 =doctype_tag
 
@@ -33,5 +34,4 @@
                 =title_header_tag
                 =notifications_tag
                 =yield
-      -#help.help.flex-3.anchor-right{:style=>("display:none;" unless session[:help])}=help_tag
       #legals=legals_sentence
