--- a/app/views/journals/balance.html.haml
+++ b/app/views/journals/balance.html.haml
@@ -1,26 +1,18 @@
-=form_tag({}, :method=>:get) do
-  .search
-    %table
-      %tr 
-        %td.crit=journal_period_crit
-        %td.submit{:rowspan=>5}=submit_tag tg(:display), :name=>nil
-      %tr
-        %td.crit=journal_entries_states_crit
-      %tr
-        %td.crit=accounts_range_crit
-      %tr
-        %td.crit
-          -centralized = @current_company.preferences.find(:all, :order=>"id", :conditions=>["name LIKE ? ", "third_%_accounts"]).collect{|p| p.value.to_s}.join(" ")
-          %label=tc(:centralize)
-          =text_field_tag("centralize", params[:centralize]||centralized, :size=>30)
-      %tr
-        %td.crit
-          -max = @current_company.accounts.maximum(Account.connection.length("COALESCE(number, '')")).to_i
-          %label=tc(:subtotals_at_level)
-          -for level in 1..max-1
-            -name = "level_#{level}"
-            =check_box_tag(name, "1", params[name]=="1")
-            %label{:for=>name}=level
+=kujaku do |k|
+  -k.crit :journal_period
+  -k.crit :journal_entries_states
+  -k.crit :accounts_range
+  -k.criterion do
+    -centralized = @current_company.preferences.find(:all, :order=>"id", :conditions=>["name LIKE ? ", "third_%_accounts"]).collect{|p| p.value.to_s}.join(" ")
+    %label=tc(:centralize)
+    =text_field_tag("centralize", params[:centralize]||centralized, :size=>30)
+  -k.criterion do
+    -max = @current_company.accounts.maximum(Account.connection.length("COALESCE(number, '')")).to_i
+    %label=tc(:subtotals_at_level)
+    -for level in 1..max-1
+      -name = "level_#{level}"
+      =check_box_tag(name, "1", params[name]=="1")
+      %label{:for=>name}=level
           
 -if @balance
   %table.list
