--- a/app/views/inventories/edit.html.haml
+++ b/app/views/inventories/edit.html.haml
@@ -1,4 +1,4 @@
-=form_tag(:action=>:update) do
+=form_tag({:action=>:update}, :method=>:put) do
   =formalize do |f|
     - f.title :general
     - f.field :inventory, :responsible_id, :choices=>{:reflection=>:users}
