--- a/app/views/entity_natures/_form.html.haml
+++ b/app/views/entity_natures/_form.html.haml
@@ -5,5 +5,5 @@
   -f.field :entity_nature, :active
   -f.field :entity_nature, :physical
   -f.field :entity_nature, :in_name
-  -# f.field :entity_nature, :format
+  -# f.field :entity_nature, :full_name_format
   -f.field :entity_nature, :description, :field=>:textarea
