Renames column y which is in conflict with another y method

--- a/app/views/warehouses/_form.html.haml
+++ b/app/views/warehouses/_form.html.haml
@@ -17,6 +17,6 @@
 =formalize do |f|
   -f.title :localization
   -f.field :warehouse, :establishment_id, :choices=>{:reflection=>:establishments}, :new=>true
-  -f.field :warehouse, :x
-  -f.field :warehouse, :y
-  -f.field :warehouse, :z
+  -f.field :warehouse, :division
+  -f.field :warehouse, :subdivision
+  -f.field :warehouse, :subsubdivision
