--- a/app/views/warehouses/show.html.haml
+++ b/app/views/warehouses/show.html.haml
@@ -5,9 +5,9 @@
   -l.attribute :name
   -l.attribute :comment
   -l.attribute :establishment
-  -l.attribute :x
-  -l.attribute :y
-  -l.attribute :z
+  -l.attribute :division
+  -l.attribute :subdivision
+  -l.attribute :subsubdivision
   -if @warehouse.reservoir
     -l.attribute :product, :label=>:name, :url=>true
     -l.attribute :number
