--- a/app/views/listings/_node.html.haml
+++ b/app/views/listings/_node.html.haml
@@ -22,7 +22,7 @@
             -unless node.reflection?
               %td.item-tool.position{:id=>"#{node.key}_position"}=render(:partial=>"listing_nodes/position", :object=>node)
             %td.item-tool.delete
-              =link_to(tg(:delete), {:action=>:destroy, :controller=>:listing_nodes, :id=>node.id}, "data-update"=>node.parent.key, "data-type"=>:html, :method=>:delete, :class=>"icon im-delete")
+              =link_to(tg(:delete), {:action=>:destroy, :controller=>:listing_nodes, :id=>node.id}, :remote=>true, "data-update"=>node.parent.key, "data-type"=>:html, :method=>:delete, :class=>"icon im-delete")
 
 -if node.reflection?
   .branches{:id=>node.key}=render(:partial=>"listings/reflection", :object=>node)
