--- a/app/views/financial_years/_form.html.haml
+++ b/app/views/financial_years/_form.html.haml
@@ -1,6 +1,8 @@
 =formalize do |f|
-  - f.error :financial_year
-  - f.field :financial_year, :code
-  - f.field :financial_year, :started_on
-  - f.field :financial_year, :stopped_on
+  -f.error :financial_year
+  -f.field :financial_year, :code
+  -if @financial_year.new_record?
+    -f.field :financial_year, :currency, :choices=>currencies
+  -f.field :financial_year, :started_on
+  -f.field :financial_year, :stopped_on
 
