--- a/app/views/journal_entries/_form.html.haml
+++ b/app/views/journal_entries/_form.html.haml
@@ -4,9 +4,8 @@
   -f.error :journal_entry
   -f.field JournalEntry.human_attribute_name("journal"), link_to(@journal_entry.journal.name, :action=>:show, :controller=>:journals, :id=>@journal.id)
   -f.field :journal_entry, :number
-  -f.field :journal_entry, :printed_on
-  -# f.field :journal_entry, :draft_mode
-  -# f.field :journal_entry, :created_on
+  -f.field :journal_entry, :printed_on, "data-dependents"=>"#exchange-rate", "data-parameter-name"=>"printed_on"
+#exchange-rate{:data=>{"refresh"=>url_for(:controller=>:journal_entries, :action=>:new, :journal_id=>@journal.id), "refresh-mode"=>"update"}}=render(:partial=>"journal_entries/exchange_rate_form")
 =hidden_field_tag "journal_id", params[:journal_id]
 %table.list{:style=>"margin-bottom: 8px;"}
   %thead
